remove alert msg

--- a/diff.html
+++ b/diff.html
@@ -52,7 +52,7 @@
       {
         var str = '<table class="table table-hover">';
         str += '<tr><th>Parameter</th><th>URL A</th><th>URL B</th></tr>';
-        alert("response: " + xmlhttp.responseText);
+        //alert("response: " + xmlhttp.responseText);
         var diffs = xmlhttp.responseText.split("\n");
         var i = 0;
         while (i < diffs.length) {
