--- a/diff.html
+++ b/diff.html
@@ -129,6 +129,12 @@
 
   <div id="tableHolder"></div>
 
+  <div align="right" style="position:absolute;bottom:0;width:100%;height:60px;">
+      <div id="clustrmaps-widget"></div>
+      <script type="text/javascript">var _clustrmaps = {'url' : 'urldiff.com', 'user' : 1140240, 'server' : '2', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2014-04-17', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www2.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script>
+      <noscript><a href="http://www2.clustrmaps.com/user/e8d116610"><img src="http://www2.clustrmaps.com/stats/maps-no_clusters/urldiff.com-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+  </div>
+
 </body>
 
 
