--- a/diff.html
+++ b/diff.html
@@ -17,7 +17,9 @@
     <![endif]-->
   </head>
   <body>
-    <h3>URL Diff tool</h3>
+    <h3>&nbsp;URL Diff tool <span class="label label-default">Beta</span></h3>
+
+    <h5 style="margin-top:20px; margin-bottom:50px">&nbsp;&nbsp;Simply copy paste two URLs here and let the tool to do the rest</h5>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
