--- a/diff.html
+++ b/diff.html
@@ -20,7 +20,7 @@
     <h3>&nbsp;URL Diff tool <span style="font-size: 10pt" class="label label-default">Beta</span></h3>
 
     <h5 style="margin-top:20px; margin-bottom:20px">&nbsp;&nbsp;Simply copy paste two URLs here and let the tool to do the rest</h5>
-    <h5 style="margin-top:3px; margin-bottom:3px">&nbsp;&nbsp;A URL should ideally comform to this definition:</h5>
+    <h5 style="margin-top:3px; margin-bottom:3px">&nbsp;&nbsp;A URL should ideally conform to this definition:</h5>
     <h5 style="margin-top:3px; margin-bottom:20px">&nbsp;&nbsp;
         <span class="label label-default">scheme://</span>
         <span class="label label-primary">host</span>
